--- a/src/containers/FitnessPosts/styles.css
+++ b/src/containers/FitnessPosts/styles.css
@@ -5,8 +5,9 @@
     margin: 20px 0;
 }
 
-.blogHeader{
+.blogHeaderFit{
   text-align: center;
+  background-color: #e6f0f5;
 }
 
 .blogCategory{
@@ -34,6 +35,8 @@
 
 .postImageContainer img{
     width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .postImageContainer kitchenImage{
