--- a/src/containers/MentalPosts/styles.css
+++ b/src/containers/MentalPosts/styles.css
@@ -3,11 +3,12 @@
     display:flex;
     justify-content: space-between;
     margin: 20px 0;
-    background-color: rgb(45, 80, 194);
+
 }
 
-.blogHeader{
+.blogHeaderMen{
   text-align: center;
+  background-color: #ebf5ee;
 }
 
 .blogCategory{
@@ -35,6 +36,8 @@
 
 .postImageContainer img{
     width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .postImageContainer kitchenImage{
