--- a/src/components/SideBar/styles.css
+++ b/src/components/SideBar/styles.css
@@ -1,4 +1,42 @@
-.sideBar{
+.sidebarContainer{
     width:27%;
-    background-color: #fff;
+
+}
+
+.sidebarHeader{
+    text-transform: uppercase;
+    font-size: 20px;
+    text-align: center;
+    padding: 10px 0;
+    box-sizing: border-box;
+    letter-spacing: 1.5px;
+    color: #565673;
+
+}
+.aboutUsImage{
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.aboutUsImage img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.cardBody{
+    font-size: 14px;
+    color: #565673;
+    padding: 10px;
+
+}
+
+.cardBody h3{
+    text-transform: uppercase;
+    font-size: 18px;
+    box-sizing: border-box;
+    letter-spacing: 1.5px;
+    color: #565673;
+
+
 }
