figuring out why the Inline styles are causing errors

--- a/src/components/SideBar/styles.css
+++ b/src/components/SideBar/styles.css
@@ -26,7 +26,7 @@
 
 .cardBody{
     font-size: 14px;
-    color: #565673;
+    color: #6c6c6c;
     padding: 10px;
 
 }
@@ -37,19 +37,28 @@
     font-weight: 400;
     box-sizing: border-box;
     letter-spacing: 1.5px;
-    color: #565673;
+    color: #6c6c6c;
+    margin: 0;
 }
 
 .recentPost h3{
     font-size: 15px;
     font-weight: 400;
     letter-spacing: 1.5px;
-    color: #565673;
+    color: #6c6c6c;
+    margin: 0;
 }
 
 .recentPost span{
     font-size: 12px;
     font-style:italic;
+    color: #6c6c6c;
+}
 
-    color: #565673;
+.recentPost{
+    border-bottom: 1px solid #6c6c6c;
+    margin-bottom: 10px;
+}
+.recentPosts{
+    padding: 20px 0;
 }
