--- a/src/data/KitchenPosts/kitchenPosts.css
+++ b/src/data/KitchenPosts/kitchenPosts.css
@@ -33,13 +33,42 @@
     display:block;
     color: #6c6c6c;
 }
-
+.postImageContainer{
+    display:flex;
+    align-content: space-between;
+    align-content: center;
+}
 .postImageContainer img{
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
 }
 
+.postImageContainerRight{
+    padding: 10px;
+    box-sizing: border-box;
+    display:flex;
+    justify-content: space-between;
+    align-content: right;
+    background-color: #f5f3e6
+}
+ .textOnLeft{
+     max-width:50%;
+     text-align: justify;
+     color: red;
+
+ }
+
+.postImageContainerRight img{
+    width: 45%;
+    border: solid white 10px;
+}
+
+.postImageContainerLeft img{
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
 .postImageContainer kitchenImage{
     max-width: 100%;
     max-height: 100%;
