--- a/src/containers/Home/styles.css
+++ b/src/containers/Home/styles.css
@@ -54,6 +54,7 @@ letter-spacing: 1.2px;
 }
 
 .rightComponent{
+    padding: 5px;
 border-bottom: 2px solid #d9d9d9;
 border-left: 1px solid #d9d9d9;
 border-right: 1px solid #d9d9d9;
