--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -21,30 +21,17 @@
     display: flex;
     justify-content: space-between;
     padding: 10px 0;
+
 }
 
 .headerMenu ul{
     margin: 0;
     padding: 0;
-    list-style: none;
-   display: inline-block;
-   text-decoration: none;
-    display: block;
-    text-transform: capitalize;
+
 }
 
-.headerMenu a{
-   list-style: none;
-   display: inline-block;
-   text-decoration: none;
-    display: block;
-    text-transform: capitalize;
-    font-weight: 400;
+.headerMenu ul a{
     color: #565673;
-    padding: 0 10px;
+
 }
 
-
-
-/* .navbar ul li a:hover{
-    color: #5f9ea0; */
